# ai-investment-intelligence-platform

./: .dockerignore  .env.example  .gitignore  CHAT_WORKING_DIRECTORY.txt  Dockerfile  LICENSE  Procfile  README.md  fly.toml  pyproject.toml  render.yaml
.github/workflows/: autonomous-agents.yml  ci.yml  deployment-check.yml  pages.yml
docs/: index.html  robots.txt  sitemap.xml
market_agent/: __init__.py
src/market_agent/: __init__.py  agent.py  cli.py  data_sources.py  models.py  nlp.py  predictors.py  web.py
src/market_agent/agents/: __init__.py  __main__.py  autonomous.py  delivery.py
src/market_agent/core/: __init__.py  data_sources.py  models.py
src/market_agent/data/: __init__.py  realtime_sources.py
src/market_agent/intelligence/: __init__.py  nlp.py  predictors.py
src/market_agent/interfaces/: __init__.py  query_parser.py
src/market_agent/prompts/: __init__.py  dataset.py  library.py
src/market_agent/reports/: __init__.py  html_report.py
src/market_agent/resources/: seo_financial_keywords.json  trusted_financial_sources.json
src/market_agent/services/: __init__.py  agent.py
src/market_agent/web_static/: app.js  index.html  styles.css
tests/: test_agent.py
tests/regression/: test_prompt_dataset_regression.py
tests/user_test/: test_user_realtime_results.py
tools/: build_listed_securities_workbook.mjs  build_prompt_validation_report.py  build_prompt_validation_workbook.mjs
