[project]
name = "make-me-rich-agent"
version = "0.1.0"
description = "AI/ML intelligent gold and Indian stock market analysis agent prototype."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
market-agent = "market_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
